force-app/main/default/objects/DataResidencyRule__mdt/DataResidencyRule__mdt.object-meta.xml
<CustomObject>
    <label>Data Residency Rule</label>
    <pluralLabel>Data Residency Rules</pluralLabel>
</CustomObject>