force-app/main/default/objects/DataResidencyRule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>If unchecked, this rule will be ignored by the data residency engine. Use this to temporarily disable a rule without deleting it.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>