force-app/main/default/objects/DataResidencyRule__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries (Comma-separated)</label>
    <description>List of countries in this zone (e.g., France,Germany,Belgium). Use comma-separated values without spaces.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>