force-app/main/default/objects/DataResidencyRule__mdt/fields/External_Storage_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Storage_URL__c</fullName>
    <label>External Storage URL</label>
    <description>URL of external data storage for this zone (e.g., AWS S3 bucket, Azure Blob Storage). Must start with http:// or https://</description>
    <type>Url</type>
</CustomField>