force-app/main/default/objects/DataResidencyRule__mdt/fields/Requires_Encryption__c.field-meta.xml
<CustomField>
    <fullName>Requires_Encryption__c</fullName>
    <label>Requires Data Encryption</label>
    <description>If checked, data in this zone must be encrypted at rest. Required for GDPR-compliant zones (EU).</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>