force-app/main/default/objects/DataResidencyRule__mdt/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <label>Zone Code</label>
    <description>Unique identifier for the data zone (e.g., EU, US, APAC)</description>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
</CustomField>